# ddc-helper

./: .gitignore  .pre-commit-config.yaml  README.md
be_ddc_helper/: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt  spec-schema.yaml
be_ddc_helper/specs/001-salesforce-intake/: spec.md
be_ddc_helper/specs/002-spanish-translation/: spec.md
be_ddc_helper/specs/003-translate-nav/: spec.md
be_ddc_helper/specs/004-translate-pages/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
be_ddc_helper/specs/004-translate-pages/contracts/: ddc-endpoints.md  translate-page.stream.md
be_ddc_helper/src/: main.py
be_ddc_helper/src/adapters/outbound/: llm_factory.py  prompts.py
be_ddc_helper/src/application/migration/: build_node.py  chrome_review_node.py  convert_node.py  enrich_node.py  spec.md  (+8 more)
be_ddc_helper/src/domain/: WIDGET-SPEC.md  deterministic_migrate.py  errors.py  pricing.py  segmentation.py
be_ddc_helper/src/infrastructure/: config.py
be_ddc_helper/tests/: conftest.py  test_glossary_search.py  test_html_translate.py  test_migrate_golden.py  test_staff_html_clean.py  test_translate_label_node.py  test_translate_page_graph.py  test_widget_extract.py
be_ddc_helper/tests/fixtures/: sections.json  skeleton_large.json  skeleton_large_expected.json  skeleton_medium.json  skeleton_medium_expected.json  skeleton_small.json  skeleton_small_expected.json
be_ddc_helper/tests/salesforce/: fixtures.py  test_bundle_builder.py  test_classifier.py  test_extractor.py  test_questionnaire_parser.py  test_title_case.py
(+232 files in other folders)
