[project]
name = "be_ddc_helper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.104.1",
    "fastapi>=0.136.3",
    "google-genai>=2.6.0",
    "openai>=1.0.0",
    "langgraph>=1.2.2",
    "pydantic-settings>=2.14.1",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.48.0",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.pytest.ini_options]
# asyncio_mode = "auto" makes pytest-asyncio treat every `async def test_*`
# as a coroutine test without requiring @pytest.mark.asyncio on each one.
# The existing salesforce tests use the marker explicitly; "auto" keeps
# them working AND lets future async tests skip the marker.
asyncio_mode = "auto"
